<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewPet">

    <androidx.cardview.widget.CardView
        android:id="@+id/create_new_pet_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_header_bar"
        android:backgroundTint="@color/blue_brand">

        <TextView
            android:id="@+id/create_new_pet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_new_pet"
            android:textColor="@color/white"
            android:textSize="28sp"></TextView>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_button_background_gray_normal"
            android:text="@string/back_btn"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/pet_photo_show"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/dog_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_pet_header" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_new_pet_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toTopOf="@id/create_new_pet_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pet_photo_show">

        <TextView
            android:id="@+id/create_pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pet_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_button_background_gray_normal"
            android:tooltipText="ฟักทอง"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/create_pet_name"
            app:layout_constraintTop_toBottomOf="@id/create_pet_name" />

        <LinearLayout
            android:id="@+id/form_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/pet_name_edit_text">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gender_pet_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/option_20_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/option_18_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="18sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/birthday_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_brand"
                    android:text="@string/birthday_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date" />


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/about_me_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_group" />

        <EditText
            android:id="@+id/about_me_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_button_background_gray_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_me_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/create_new_pet_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_button_background_blue"
        android:padding="16dp"
        android:text="@string/create_new_pet"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_pet_form" />


</androidx.constraintlayout.widget.ConstraintLayout>