<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetDetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/pet_picture"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/dog_1"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"/>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/shape_button_background_gray_normal"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/btn_option"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/shape_button_background_gray_normal"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/pet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_zone"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/pet_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black_brand"
        android:layout_margin="24dp"/>
    <ImageView
        android:id="@+id/ic_paw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_pets_24"
        app:layout_constraintTop_toBottomOf="@id/pet_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"/>
    <TextView
        android:id="@+id/pet_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_type"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/ic_paw"
        app:layout_constraintTop_toBottomOf="@id/pet_name"
        android:layout_marginStart="4dp"
        android:textColor="@color/hard_gray_brand"
        android:layout_marginTop="4dp"/>

    <!--                Hearts-->
    <LinearLayout
        android:id="@+id/heart_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ic_paw"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp">

        <ImageView
            android:id="@+id/ic_heart1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_favorite_24_gray" />

        <ImageView
            android:id="@+id/ic_heart2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_favorite_24_gray" />

        <ImageView
            android:id="@+id/ic_heart3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_favorite_24_gray" />

        <ImageView
            android:id="@+id/ic_heart4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_favorite_24_gray" />

        <ImageView
            android:id="@+id/ic_heart5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_favorite_24_gray" />

        <ImageView
            android:id="@+id/ic_heart6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_favorite_24_gray" />
    </LinearLayout>
    <ImageView
        android:id="@+id/ic_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sex_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_zone"
        android:layout_margin="24dp"/>

    <LinearLayout
        android:id="@+id/pet_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/heart_rating"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_marginTop="8dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/yellow_brand"
            app:cardCornerRadius="10dp"
            android:layout_margin="4dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_age_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_age_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_age_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/placeholder_age"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_age_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_brand"
            app:cardCornerRadius="10dp"
            android:layout_margin="16dp"

            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="24dp"
                >

                <TextView
                    android:id="@+id/tv_human_age_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/human_age"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_human_age_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_human_age_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/placeholder_age"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_human_age_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/red_brand"
            app:cardCornerRadius="10dp"
            android:layout_margin="4dp"

            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="24dp"
                >

                <TextView
                    android:id="@+id/tv_love_point_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lovepoint_text"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_love_point_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_love_point_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="XXX"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_love_point_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/pet_details"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textColor="@color/black_brand"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_about_me"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        >

        <TextView
            android:id="@+id/tv_about_me_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_none"
            android:textColor="@color/black_brand"
            android:textSize="20sp"
            />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>